--- a/.github/workflows/wasmfx_main.yml
+++ b/.github/workflows/wasmfx_main.yml
@@ -38,6 +38,7 @@ jobs:
     - run: cargo build --manifest-path crates/wast/Cargo.toml --no-default-features --features wasm-module
     - run: cmake -S ${{github.workspace}}/examples -B ${{github.workspace}}/examples/build -DCMAKE_BUILD_TYPE=Release
     - run: cmake --build ${{github.workspace}}/examples/build --config Release
+    - run: cargo build --release
 
   rustfmt:
     name: Rustfmt
