--- a/.github/workflows/wasmfx_main.yml
+++ b/.github/workflows/wasmfx_main.yml
@@ -14,17 +14,14 @@ concurrency:
 jobs:
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [stable, beta, nightly, macos, windows]
-        include:
-          - build: stable
-            os: ubuntu-latest
-            rust: stable
-          - build: macos
-            os: macos-latest
-            rust: stable
+        os:
+          - ubuntu-latest
+          - macos-latest
+        rust:
+          - stable
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
       with:
