Disable verify-publish step.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -175,7 +175,7 @@ jobs:
       - run: cargo doc --all
 
   verify-publish:
-    if: github.repository_owner == 'wasmfx'
+    if: github.repository_owner == 'bytecodealliance'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
