--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
     name: Publish artifacts of build
     runs-on: ubuntu-latest
     if: |
-      github.repository_owner == 'wasmfx'
+      github.repository_owner == 'bytecodealliance'
       && github.event_name == 'push'
       && github.ref == 'refs/heads/main'
     steps:
@@ -85,5 +85,4 @@ jobs:
         ./publish publish
       env:
         CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      if: false && steps.tag.outputs.push_tag == 'yes'
-      # NOTE(dhil): We do not publish on crates.io
+      if: steps.tag.outputs.push_tag == 'yes'
